<resources>
    <string name="app_name">أطلب و أستني</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">الأعداد</string>
    <string name="settings">الاعداد</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="homepage">الصفحه الرئيسيه</string>
    <string name="dash_board">متابعة أعمالك</string>
    <string name="post_project">أكتب طلباتك</string>
    <string name="customer_project">مشروعاتك</string>
    <string name="jop_search">البحث عن وظيف</string>
    <string name="log_out">تسجيل خروج</string>
    <string name="language">اللغه</string>
    <string name="about">عننا</string>
    <string name="title_activity_registration">سجل عندنا </string>
    <string name="sigin_in">تسجيل الدخول</string>
    <string name="defaultpassword"><a href="http://stackoverflow.com/questions/9852184/android-textview-hyperlink?rq=1">google stack overflow</a></string>
    <string name="myMoney">حسابى</string>
    <string name="SaveMoney">حسابك عندنا</string>
    <string name="totalAccount">رصيدك وصل</string>
    <string name="totalMoney">00.00 جنيه مصرى</string>
    <string name="yourAccount">حسابك عندنا</string>
    <string name="yourMoney">00.00 جنيه مصرى</string>
    <string name="numberOfBids">عدد المنقصات</string>
    <string name="remainBids">0</string>
    <string name="search_about_handCraft">البحث عن عامل</string>
    <string name="post_project_head">أطلب مشروعك معانا ببلاش !!</string>
    <string name="post_project_details">تفاصيل مشروعك ؟</string>
    <string name="post_project_details_hint">أنا محتاج ..</string>
    <string name="title_activity_post_project_main">PostProject</string>
    <string name="post_project_skills">مهارات ؟</string>
    <string name="post_project_skills_hint">المهارات التي يجب توفرها لتنفيذ مشروعك ..</string>
    <string name="post_project_category">اختار تصنيف للمشروع</string>
    <string name="post_project_title">عنوان مشروعك ؟</string>
    <string name="post_project_title_hint">برواز خشبي , علبه فضيه ...</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deliver_on">يسلم فى:</string>
    <string name="project_user_name">أسم العميل</string>
    <string name="more">المزيد...</string>
    <string name="second_post_project_head">محتاجين نعرف اكتر ..</string>
    <string name="post_project_buget">حتدفع لحد كام ؟</string>
    <string name="post_project_buget_coins">جنيه</string>
    <string name="post_project_date">محتاج طلبك في خلال قد ايه ؟</string>
    <string name="post_project_more_details">حابب توضح اكتر التفاصيل ؟</string>
    <string name="post_project_more_details_hint">محتاج اني استخدمها في ...</string>
    <string name="post_project_attachment_file">ضيف فايل او صوره توضح فكرتك اكتر</string>
    <string name="post_project_terms">أقبل بالشروط والاحكام</string>
    <string name="post_project_done_button">أطلب</string>
    <string name="post_project_next_button">التالي</string>
    <string name="days_string">أيام</string>
    <string name="two_weeks_string">أسبوعان</string>
    <string name="three_weeks_string">أسابيع</string>
    <string name="month_string">شهر</string>
    <string name="anytime_string">أي وقت</string>
    <string name="title_activity_profile">Edit Profile</string>
    <string name="change_pic_button_string">تغيير</string>
    <string name="profile_personal_information">ملفك الشخصي</string>
    <string name="profile_professinal_title">المسمي الوظيفي</string>
    <string name="profile_summary">نبذه عنك</string>
    <string name="profile_skills">مهاراتك</string>
    <string name="profile_phone">رقم الموبيل</string>
    <string name="profile_city">المحافظه</string>
    <string name="profile_street">العنوان</string>
    <string name="radio_male">ذكر</string>
    <string name="radio_female">أنثي</string>
    <string name="protolio_button_string">ملف اعمالي</string>
    <string name="title_activity_protoflio">ملف أعمالك</string>
    <string name="select_category_title">اختار فئه للعمل</string>
    <string name="portDescription">وصف للعمل</string>
    <string name="portfolio_information">أعرض افضل اعمالك</string>
    <string name="add_photos">أضف صوره او مجموعه صور لعملك</string>
    <string name="title_activity_custom_photo_gallery">اختار صور العمل</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_test">test</string>
    <string name="project_name">أسم المشروع</string>
    <string name="wanted_money_title">قابل للتفاوض</string>
    <string name="pids_title"> الطلبات المقدمه</string>
    <string name="number_of_pids">11</string>
    <string name="number_of_views">عدد المشاهدات</string>
    <string name="number_of_views_title">20</string>
    <string name="project_state">مفتوح</string>
    <string name="state_title">حالة المشروع</string>
    <string name="description"> إستعمل التبرعات, أي انه تسبب فشكّل النزاع.  شيء عن المارق باستحداث, أواخر أدوات التقليدية أن مكن. بحق بوابة علاقة مع, جُل مع أمام اتفاق, تلك في اللا الصعداء. إذ عدد فرنسية التحالف. ما الثالث مواقعها كلا, يتم ان مئات استراليا،, موالية تحرّكت مدن ثم. هو مايو محاولات الثانية نفس, تم به، ببعض ودول, الحرة اكتوبر جُل مع. من لفشل دأبوا تحرّك حول, قائمة البرية انه قد. الجوي وسمّيت التّحول ما بين, أدنى الإتفاقية و لكل.</string>
    <string name="posted_by_title">اسم العميل</string>
    <string name="review">التقيم</string>
    <string name="client_name">محمد</string>
    <string name="add_pids">أطلب أنك تعمل المشروع</string>
    <string name="title_activity_upload_image">UploadImageActivity</string>
    <string name="show_profile">ملفك الشخصي</string>
    <string name="alert">تنبيه</string>
    <string name="error_message">لا يمكن استرجاع البيانات تحقق من الانترنت</string>
    <string name="category_head">الفئات</string>
    <string name="jobs_head">الوظائف</string>
    <string name="workers_head">الموردين</string>
    <string name="price_text">السعر: </string>
    <string name="price_tag">ج.م</string>
    <string name="deliver_on_text">التسليم :</string>
    <string name="post_project_toolbar_title">أطلب مشروعك</string>
    <string name="post_project_details_tab">التفاصيل</string>
    <string name="post_offer">قدم عرض</string>
    <string name="pendding">معلق</string>
    <string name="rejected">مرفوض</string>
    <string name="poroposal_state">حاله العرض</string>
    <string name="ProposalList_head">العروض</string>
    <string name="choose_your_skilss">اختار مهراتك</string>
    <string name="yourEmail">ادخل اميلك</string>
    <string name="password">ادخل رقمك السرى</string>
    <string name="RePassword">أعد كتابة رقمك السرى</string>
    <string name="AgreeTearmsOfServices">الموافقه على الشروط و الأحكام</string>
    <string name="Show_terms_of_services">اظهار الشروط و الأحكام</string>
    <string name="choiseYourSkills">أختار مهراتك</string>
    <string name="ok">حفظ</string>
    <string name="cancel">ألغاء</string>
    <string name="sigin_up">أنشاء حساب</string>
    <string name="yourUserName">ادخل أسمك</string>
    <string name="proposal_details_hint">ادعم عرضك بمعلومات عنه/ امتي حتسلمه ليه شايف انك تقدر تعمل الشغل ده.......</string>
    <string name="profile_cityPart">المركز</string>
    <string name="logintab">تسجيل الدخول</string>
    <string name="singuptab">انشاء حساب</string>
    <string name="title_profile">صفحتي الشخصيه</string>
    <string name="you_must_login">لابد من تسجيل الدخول اولا..</string>
    <string name="kindOfAccount">تسجيل الدخول ك</string>
    <string name="hired">عميل</string>
    <string name="worker">صاحب حرفه يدويه</string>
    <string name="registrationErrorMsg">خطأ فى التسجيل</string>
    <string name="password_error_msg">كلمة السر لابد ان تكون متتطابقه</string>
    <string name="emailErrorMsg">برجاء ادخال اميل صحيح</string>
    <string name="dataErrorMsg">برجاء التأكد من ادخال كل البينات المطلوبه</string>
    <string name="project_type_text">اختار تصنيف لمشروعك</string>
    <string name="project_long_text">الطول المطلوب</string>
    <string name="project_size_text">الحجم المطلوب</string>
    <string name="project_matrial_text">الماده المستخدمه</string>
    <string name="project_color_text">اللون</string>
    <string name="project_width_text">العرض المطلوب</string>
    <string name="updateDate">تم تعديل البينات بنجاح</string>
    <string name="you_must_fill_alldata">يجب ادخال جميع البيانات قبل الانتقال للصفحه التاليه</string>
</resources>
