<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp">
    <FrameLayout
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:background="@color/light_gray"
        >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="24dp"
        android:textColor="@color/light_black"
        android:gravity="center_horizontal"
        android:padding="2dp"
        android:layout_alignParentBottom="true"
        android:text="@string/post_project_head" />

        <LinearLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:elevation="1dp"
            android:layout_margin="2dp"
            android:padding="4dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textSize="20dp"
            android:textColor="@color/light_black"
            android:layout_alignParentBottom="true"
            android:text="@string/post_project_title" />
        <EditText
            android:layout_marginBottom="24dp"
            android:hint="@string/post_project_title_hint"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:textColor="@color/light_black"
            android:scrollbars="vertical"
            android:id="@+id/project_title_edittext"
            />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:textSize="20dp"
        android:textColor="@color/light_black"
        android:layout_alignParentBottom="true"
        android:text="@string/post_project_details" />



    <EditText
        android:inputType="textMultiLine"
        android:lines="6"
        android:minLines="4"
        android:gravity="top|right"
        android:maxLines="8"
        android:layout_marginBottom="10dp"
        android:hint="@string/post_project_details_hint"
        android:textColor="@color/light_black"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:scrollbars="vertical"
        android:id="@+id/project_details_edittext"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:textSize="20dp"
        android:textColor="@color/light_black"
        android:layout_alignParentBottom="true"
        android:text="@string/post_project_skills" />
    <EditText
        android:inputType="textMultiLine"
        android:lines="4"
        android:minLines="2"
        android:gravity="top|right"
        android:maxLines="6"
        android:layout_marginBottom="24dp"
        android:textColor="@color/light_black"
        android:hint="@string/post_project_skills_hint"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:scrollbars="vertical"
        android:id="@+id/project_skills_edittext"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textSize="20dp"
            android:textColor="@color/light_black"
            android:layout_alignParentBottom="true"
            android:text="@string/post_project_category" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/light_black"
            android:layout_gravity="right"
            android:gravity="right"
            android:textSize="20dp"
            android:background="@android:color/transparent"
            android:id="@+id/category_spinner" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="4dp"
            android:textSize="20dp"
            android:textColor="@color/light_black"
            android:layout_alignParentBottom="true"
            android:text="" />
</LinearLayout>
    </LinearLayout>
    </ScrollView>
    </FrameLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_project_next_button"
        android:elevation="2dp"
        android:background="@color/light_green"
        android:textSize="24dp"
        android:textColor="@color/light_black"
        android:layout_gravity="bottom"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:id="@+id/next_button"
        />
</RelativeLayout>