<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp">
    <FrameLayout
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:background="@color/light_gray"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical" android:layout_width="match_parent"
                android:layout_height="match_parent">



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textSize="24dp"
                    android:textColor="@color/light_black"
                    android:gravity="center_horizontal"
                    android:padding="2dp"
                    android:layout_alignParentBottom="true"
                    android:text="@string/post_project_head" />

                <LinearLayout
                    android:orientation="vertical" android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/light_gray"
                    android:elevation="1dp"
                    android:layout_margin="2dp"
                    android:padding="4dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:textSize="20dp"
                        android:textColor="@color/light_black"
                        android:layout_alignParentBottom="true"
                        android:text="@string/post_project_title" />
                    <EditText
                        android:layout_marginBottom="24dp"
                        android:hint="@string/post_project_title_hint"
                        android:layout_height="wrap_content"
                        android:layout_width="fill_parent"
                        android:textColor="@color/light_black"
                        android:scrollbars="vertical"
                        android:id="@+id/project_title_edittext"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:textSize="20dp"
                        android:textColor="@color/light_black"
                        android:layout_alignParentBottom="true"
                        android:text="@string/project_type_text" />
                    <Spinner
                        android:layout_marginBottom="24dp"
                        android:layout_height="wrap_content"
                        android:layout_width="fill_parent"
                        android:textColor="@color/light_black"
                        android:id="@+id/project_type_spinner"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:textSize="20dp"
                        android:textColor="@color/light_black"
                        android:layout_alignParentBottom="true"
                        android:text="@string/project_long_text" />



                    <EditText
                        android:gravity="top|right"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/light_black"
                        android:layout_height="wrap_content"
                        android:layout_width="fill_parent"
                        android:scrollbars="vertical"
                        android:id="@+id/project_long_edittext"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:textSize="20dp"
                        android:textColor="@color/light_black"
                        android:layout_alignParentBottom="true"
                        android:text="@string/project_width_text" />



                    <EditText
                        android:gravity="top|right"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/light_black"
                        android:layout_height="wrap_content"
                        android:layout_width="fill_parent"
                        android:scrollbars="vertical"
                        android:id="@+id/project_width_edittext"
                        />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:textSize="20dp"
                        android:textColor="@color/light_black"
                        android:layout_alignParentBottom="true"
                        android:text="@string/project_size_text" />



                    <EditText
                        android:gravity="top|right"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/light_black"
                        android:layout_height="wrap_content"
                        android:layout_width="fill_parent"
                        android:scrollbars="vertical"
                        android:id="@+id/project_size_edittext"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:textSize="20dp"
                        android:textColor="@color/light_black"
                        android:layout_alignParentBottom="true"
                        android:text="@string/project_matrial_text" />

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/light_black"
                        android:layout_gravity="right"
                        android:gravity="right"
                        android:textSize="20dp"
                        android:background="@android:color/transparent"
                        android:id="@+id/project_matrial_spinner" />



                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:textSize="20dp"
                        android:textColor="@color/light_black"
                        android:layout_alignParentBottom="true"
                        android:text="@string/project_color_text" />

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/light_black"
                        android:layout_gravity="right"
                        android:gravity="right"
                        android:textSize="20dp"
                        android:background="@android:color/transparent"
                        android:id="@+id/project_color_spinner" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="4dp"
                        android:textSize="20dp"
                        android:textColor="@color/light_black"
                        android:layout_alignParentBottom="true"
                        android:text="" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_project_next_button"
        android:elevation="2dp"
        android:background="@color/light_green"
        android:textSize="24dp"
        android:textColor="@color/light_black"
        android:layout_gravity="bottom"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:id="@+id/next_button"
        />
</RelativeLayout>