<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="32dp"
        android:background="@color/light_gray"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/employee_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="2dp"
            android:text="pill"
            android:textColor="@color/light_black"
            android:textSize="20dp"
            />


        <TextView
            android:id="@+id/employee_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:paddingLeft="4dp"
            android:text="pill"
            android:textColor="@color/light_black"
            android:textSize="@dimen/abc_dialog_padding_top_material"
            />

        <RatingBar
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/ratingBarStyleSmall"
            android:numStars="5"
            android:textColor="@color/light_black"
            android:stepSize="0.1"
            android:isIndicator="true" />
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:background="@color/light_gray"
        android:elevation="1dp"
        tools:context="com.example.iti.sidemenumodule.view.ProjectDetails"
        android:gravity="center">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="1dp"
            android:layout_marginStart="1dp"
            android:paddingEnd="2dp"
            android:paddingRight="2dp"
            android:paddingLeft="2dp"
            android:layout_weight="1"
            tools:context="com.example.iti.sidemenumodule.view.ProjectDetails"
            android:gravity="center"
            >
            <TextView android:text="@string/totalMoney"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/project_price"
                android:textSize="13sp"
                android:textColor="@color/light_black"
                android:gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp" />

            <TextView android:text="@string/post_project_buget_coins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/light_black"
                android:gravity="center_horizontal"
                android:layout_marginBottom="5dp" />
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="1dp"
            android:layout_marginStart="1dp"
            android:paddingEnd="2dp"
            android:paddingRight="2dp"
            android:paddingLeft="2dp"
            android:layout_weight="1"
            tools:context="com.example.iti.sidemenumodule.view.ProjectDetails"
            android:gravity="center">
            <TextView android:text="@string/number_of_pids"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/single_project_delver_textview"
                android:textSize="13sp"
                android:textColor="@color/light_black"
                android:gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp" />
            <TextView android:text="@string/deliver_on_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/project_mde_intails"
                android:textSize="12sp"
                android:textColor="@color/light_black"
                android:gravity="center_horizontal"
                android:layout_marginBottom="5dp" />
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="1dp"
            android:layout_marginStart="1dp"
            android:paddingEnd="2dp"
            android:paddingRight="2dp"
            android:paddingLeft="2dp"
            android:layout_weight="1"
            tools:context="com.example.iti.sidemenumodule.view.ProjectDetails"
            android:gravity="center">
            <TextView android:text="@string/project_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/project_namde_intails"
                android:textSize="13sp"
                android:textColor="@color/light_black"
                android:gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp" />
            <TextView android:text="@string/poroposal_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/project_namde_ntails"
                android:textSize="12sp"
                android:textColor="@color/light_black"
                android:gravity="center_horizontal"
                android:layout_marginBottom="5dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>